[RippleItem] fix exit animation on IE11

--- a/src/Ripple/RippleItem.css
+++ b/src/Ripple/RippleItem.css
@@ -1,5 +1,7 @@
 .container {
   opacity: 1;
+  position: absolute;
+  left: 0;
 }
 
 .containerLeaving {
